--- a/SIRP/Framework/GetTransactionData.xaml
+++ b/SIRP/Framework/GetTransactionData.xaml
@@ -11,7 +11,7 @@
   <mva:VisualBasic.Settings>
     <x:Null />
   </mva:VisualBasic.Settings>
-  <sap:VirtualizedContainerService.HintSize>2331,3707</sap:VirtualizedContainerService.HintSize>
+  <sap:VirtualizedContainerService.HintSize>2323,3707</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>GetTransactionData_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
     <scg:List x:TypeArguments="x:String" Capacity="54">
@@ -284,7 +284,7 @@
                 <OutArgument x:TypeArguments="njl:JToken">[jBody("sbs_robotstarteddatetime")]</OutArgument>
               </Assign.To>
               <Assign.Value>
-                <InArgument x:TypeArguments="njl:JToken">[Now.ToString]</InArgument>
+                <InArgument x:TypeArguments="njl:JToken">[Date.UtcNow.ToString("yyyy-MM-ddTHH:mm:ss.fffZ")]</InArgument>
               </Assign.Value>
             </Assign>
             <ui:InvokeWorkflowFile ArgumentsVariable="{x:Null}" ContinueOnError="{x:Null}" DisplayName="Set Dataverse Record In Progress" sap:VirtualizedContainerService.HintSize="434,114" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_3" UnSafe="False" WorkflowFileName="Process\Process Subflows\Update Dataverse Record.xaml">
